welcome.lessons.welcome.loopfor.LoopCourse.scala.code
while(nbpas<8){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse(); nbpas = nbpas + 1;
}
gauche(); nbpas = 0;
while(nbpas<8){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse(); nbpas = nbpas + 1;
}
gauche();nbpas = 0;
 while(nbpas<8){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse(); nbpas = nbpas + 1;
}
gauche(); nbpas=0;
while(nbpas<8){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse(); nbpas = nbpas + 1;
}